# Statsmec

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  README.md  docker-compose.yml
.github/workflows/: deploy-frontend.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  seed.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: analytics.py  me.py  users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  match.py  user.py
backend/app/schemas/: analytics.py  match.py  user.py
backend/app/services/: allstar_client.py  analytics.py  auto_sync.py  cache.py  external_clients.py  faceit_ingestor.py  mongo_stats.py
backend/tests/: test_health.py
frontend/: CNAME  Dockerfile  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.mjs  vite.config.ts
frontend/.astro/: data-store.json  settings.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ClassicStats.svelte  Footer.astro  Highlights.svelte  LiveStatus.svelte  MatchHistory.svelte  MatchHistoryPanel.test.tsx  MatchHistoryPanel.tsx  Navbar.astro  PerformanceChart.svelte  PerformanceTrendsPanel.tsx  ProfileCard.tsx  ProfileHero.svelte  RankComparisonPanel.tsx  Scoreboard.svelte  WeaponBreakdown.svelte  WeaponHeatmapPanel.tsx
frontend/src/layouts/: MainLayout.astro
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
